--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,8 @@ jobs:
         key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
     - name: Set up Python
       uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
     - name: Install PlatformIO
       run: |
         python -m pip install --upgrade pip
@@ -43,14 +45,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Download Firmware Files
-      uses: actions/download-artifact@v2
-      with:
-        path: release
+      uses: actions/download-artifact@v3
     - name: Release Firmware
-      uses: ncipollo/release-action@v1
-      if: startsWith(github.ref, 'refs/tags/') 
+      uses: ncipollo/release-action@v2
+      #if: startsWith(github.ref, 'refs/tags/')
       with:
-        artifacts: release/*/*.bin
+        artifacts: esp8266-firmware.bin
         generateReleaseNotes: true
         allowUpdates: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+        #token: ${{ secrets.GITHUB_TOKEN }}
