--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,11 +46,13 @@ jobs:
     steps:
     - name: Download Firmware Files
       uses: actions/download-artifact@v3
+      with:
+        path: release
     - name: Release Firmware
       uses: ncipollo/release-action@v1
       #if: startsWith(github.ref, 'refs/tags/')
       with:
-        artifacts: esp8266-firmware.bin
+        artifacts: release/*/*.bin
         generateReleaseNotes: true
         allowUpdates: true
         #token: ${{ secrets.GITHUB_TOKEN }}
