Read wifi config from LittleFS Use WIFIMulti

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ monitor_speed = 115200
 lib_deps = 
 	arduino-libraries/ArduinoHttpClient@^0.4.0
 	jandrassy/ArduinoOTA@^1.0.9
+	bblanchon/ArduinoJson@^6.20.0
 
 [env:nodemcuv2_ota]
 extends = env:nodemcuv2
