--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	arduino-libraries/ArduinoHttpClient@^0.4.0
 	jandrassy/ArduinoOTA@^1.0.9
 	bblanchon/ArduinoJson@^6.20.0
+	tzapu/WiFiManager@^0.16.0
 
 [env:nodemcuv2_ota]
 extends = env:nodemcuv2
