--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+upload_speed = 460800
 lib_deps = 
 	arduino-libraries/ArduinoHttpClient@^0.4.0
 	jandrassy/ArduinoOTA@^1.0.9
