--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+src_dir = examples/esp_ghota_example ;this points to a single example *.ino sketch which includes the setup/loop functions
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
