Include lib_deps

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,11 @@ board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 upload_speed = 460800
-; lib_deps = 
-; 	arduino-libraries/ArduinoHttpClient@^0.4.0
-; 	jandrassy/ArduinoOTA@^1.0.9
-; 	bblanchon/ArduinoJson@^6.20.0
-; 	tzapu/WiFiManager@^0.16.0
+lib_deps = 
+	arduino-libraries/ArduinoHttpClient@^0.4.0
+	jandrassy/ArduinoOTA@^1.0.9
+	bblanchon/ArduinoJson@^6.20.0
+	tzapu/WiFiManager@^0.16.0
 
 [env:nodemcuv2_ota]
 extends = env:nodemcuv2
